Some updates to start bringing in styling

--- a/_sass/anna-reisz-editing.scss
+++ b/_sass/anna-reisz-editing.scss
@@ -4,8 +4,10 @@
 /* Mixins */
 @import 'components/mixins';
 
-/* CSS Reset */
-
 /* Main styling */
+@import 'styles/fonts';
 
 /* Component Styling */
+@import 'styles/general';
+@import 'styles/header';
+@import 'styles/footer';
