Start working on hero image

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="footer-column-container">
     <div class="footer-column">
       <a href="{{ site.url }}/index.html" class="logo-image-link">
-        <img class="logo-image" alt="" src="{{ site.url }}/assets/images/anna-reisz-editing-logo-box.png" />
+        <img class="logo-image" alt="" src="{{ site.url }}/assets/images/anna-reisz-editing-logo-box-white.svg" />
       </a>
         <span class="footer-copyright">&copy;2021 Anna Reisz Editing</s>
     </div>
