--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="nav-header">
   <nav>
     <a href="{{ site.url }}/index.html" class="logo-image-link">
-      <img class="logo-image" alt="" src="{{ site.url }}/assets/images/anna-reisz-editing-logo-box.png" />
+      <img class="logo-image" alt="" src="{{ site.url }}/assets/images/anna-reisz-editing-logo-box.svg" />
     </a>
     <div class="nav-menu-icon">Menu</div>
     <div class="nav-menu-items-container">
