--- a/_sass/styles/general.scss
+++ b/_sass/styles/general.scss
@@ -3,13 +3,19 @@
 }
 
 body {
+    display: flex;
+    flex-flow: column nowrap;
     width: 100vw;
+    min-height: 100vh;
     background-color: $white;
     overflow-x: hidden;
 }
 
 #main {
-    min-height: 50vh;
+    flex: 1 1 auto;
+}
+
+.main-content {
     width: 100%;
     max-width: $max-width;
     margin: 1rem auto;
