--- a/_sass/styles/header.scss
+++ b/_sass/styles/header.scss
@@ -1,6 +1,8 @@
 header.nav-header {
+    flex: 0 0 auto;
     width: 100vw;
     height: 7rem;
+    box-shadow: 0 4px 15px 0 rgba($charcoal, .1);
 
     nav {
         display: flex;
@@ -10,7 +12,7 @@ header.nav-header {
         height: 100%;
         width: 100%;
         max-width: $max-width;
-        margin: 1rem auto;
+        margin: 0 auto;
 
         .logo-image-link {
             height: 3.5rem;
