Make some more changes to get the site set up

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="nav-header">
+<header id="nav-menu" class="nav-header">
   <nav>
     <a href="{{ site.url }}/index.html" class="logo-image-link">
       <img class="logo-image" alt="" src="{{ site.url }}/assets/images/anna-reisz-editing-logo-box.svg" />
