--- a/_sass/anna-reisz-editing.scss
+++ b/_sass/anna-reisz-editing.scss
@@ -11,4 +11,10 @@
 @import 'styles/general';
 @import 'styles/header';
 @import 'styles/footer';
+@import 'styles/section-header';
+
+/* Page Styling */
 @import 'styles/index';
+@import 'styles/services';
+@import 'styles/contact';
+@import 'styles/blog';
