--- a/_sass/components/variables.scss
+++ b/_sass/components/variables.scss
@@ -5,7 +5,7 @@ $light-green:   #84C8AF;
 $black:         #000000;
 $charcoal:      #252525;
 $dark-grey:     #424242;
-$light-grey:    #DEDEDE;
+$light-grey:    #F5F5F5;
 $white:         #FFFFFF;
 
 
