--- a/_includes/section-header.html
+++ b/_includes/section-header.html
@@ -2,7 +2,7 @@
   <div class="section-header-text-container">
     <h2 class="section-header-title">{{ include.title }}</h2>
     {% if include.tagline %}
-      <h3>{{ include.tagline }}</h3>
+      <h3 class="section-header-subtitle">{{ include.tagline }}</h3>
     {% endif %}
   </div>
 </div>
