--- a/_sass/styles/index.scss
+++ b/_sass/styles/index.scss
@@ -1,9 +1,10 @@
 .hero-image {
     position: relative;
     width: 100%;
-    height: 70vh;
+    height: 55vh;
     background-image: linear-gradient(to right, rgba($charcoal, .1), rgba($charcoal, .5)),
     url("/assets/images/hero-image.jpg");
+    background-attachment: fixed;
     background-position: center center;
     background-size: cover;
 
@@ -32,4 +33,11 @@
             font-size: 2.5rem;
         }
     }
+}
+
+.headshot {
+    width: 15rem;
+    height: auto;
+    float: right;
+    margin: 0 0 2rem 2rem;
 }
